tests/tooling/fixtures/native/execution/positive/compound_assignment_basic.objc3
module CompoundAssignmentBasic;

fn main() -> i32 {
  let value = 10;
  value += 5;
  value -= 2;
  value *= 3;
  value /= 4;
  return value;
}