tests/tooling/fixtures/native/execution/negative/separator_literal_global_divide_by_zero.objc3
module SeparatorLiteralGlobalDivideByZero;

let value = 1_0 / 0_0;

fn main() -> i32 {
  return value;
}
